fixing price display on product detail page
pricing on product detail page was too big, has been corrected

--- a/skin/frontend/default/clairsoft/sass/local.scss
+++ b/skin/frontend/default/clairsoft/sass/local.scss
@@ -148,6 +148,26 @@ body{
 
 }
 
+.product-shop .price-box .free-price-default span.price{
+	font-size: 40px !important;
+	margin: 8px 0 4px 0 !important;
+}
+
+.product-shop .special-price.more-than-three-digits .free-price-default{
+	font-size: 40px !important;
+	margin: 8px 0 4px 0 !important;
+}
+
+.product-shop .our-price .more-than-three-digits-default span.price{
+	font-size: 36px !important;
+	margin: 8px 0 4px 0 !important;
+}
+
+.product-shop .special-price.more-than-three-digits .more-than-three-digits-default{
+	font-size: 36px !important;
+	margin: 8px 0 4px 0 !important;
+}
+
 #email-subscribe{
 	background: white;
 	height: 250px;
